src/components/HompageFeatures/styles.module.css
.authors {
    display: flex;
    flex-direction: column;
    gap: 4rem;
    align-items: center;
    padding: 2rem 0;
    width: 100%;
    background-color: #0d47a1;
    color: white;
}

row {
    gap: 2rem;
}

.customerVoices {
    display: flex;
    align-items: center;
    padding: 2rem 0;
    width: 100%;
    vertical-align: center;
}

.subsection {
    display: flex;
    padding: 2rem;
    border: dashed 1px black;
    margin: 0 1rem;
    border-radius: 10px;
    vertical-align: center;
    row-gap: 2rem;
}

.subsectionContent {
    padding: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.customerVoicesImg {
    height: auto;
    width: auto;
    vertical-align: center;
    border-radius: 30px;
    -webkit-filter: drop-shadow(5px 5px 5px #222);
    filter: drop-shadow(5px 5px 5px #222);
}

.blockContainer {
    justify-content: center;
    max-width: 80rem;
    display: flex;
    border-radius: 4px;
    padding: 16px;
    margin: 0 1rem;

    flex-wrap: wrap;
    align-items: center;
    width: 100%;
}

.applicationWindow {
    max-width: 100%;
    position: relative;
}

.title {
    margin-bottom: 3rem;
    text-align: center;
}

.description {
    --tw-shadow: 0 16px 32px -16px rgba(0,0,0,.1),0 0 0 1px rgba(0,0,0,.1);
    --tw-ring-offeset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;

    flex: 1 1 40%;
    height: max-content;
    padding: 3rem 1rem;
    border-bottom-right-radius: 1rem;
    border-top-right-radius: 1rem;
    border-left: 0;
    text-align: center;
    align-items: center;
    justify-content: center;
    margin-top: 12px;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000), var(--tw-shadow);
}

pre {
    border: 1px solid #e5e7eb;
    margin-top: 0 !important;
    background-color: white !important;
    padding: 2rem 1rem !important;
}

.applicationMenuBar {
    height: 30px;
    width: 100%;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    position: relative;
    z-index: 1;
    top: 5px;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
    border: 1px solid #e5e7eb;
    --tw-bg-opacity: 1;
    background-color: rgb(246 247 249/var(--tw-bg-opacity));
    display: flex;
    align-items: center;
}


section {
    gap: 0.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-image: conic-gradient(from 90deg at -10% 100%,#bcc1cd 0deg,#bcc1cd 90deg,#fff 1turn);
    display: flex;
    flex-direction: column;
    align-items: center;
}

@media (min-width: 1024px) {
    h1 {
        font-size: 35px;
    }
}

h1 {
    text-align: center;
}

.sponsors {
    margin-top: 5rem;
    margin-bottom: 5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 1rem;
    object-fit: cover;
}

.contribution > h1 {
    text-align: center;
    max-width: 52rem;
}

.heading {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 80rem;
}

.heading {
    padding: 16px;
}

.heading p {
    max-width: 60rem;
    text-align: center;
}

@media (min-width: 1024px) {
    .heading p {
        font-size: 20px;
    }
}

.heading h1 {
    text-align: center;
}

@media (min-width: 1024px) {
    .heading h1 {
        max-width: 70rem;
    }

    .sectionFooter {
        font-size: 20px;
    }
}

.sectionFooter {
    max-width: 48rem;
    text-align: center;
    padding: 16px;
}

.logos {
    position: absolute;
    left: 2rem;
    bottom: 0;
    display: flex;
    flex-direction: row;
    gap: 1rem;
}

.logos img {
    width: 3rem;
    height: 3rem;
    box-shadow: rgba(0, 0, 0, 0.04) 0 3px 5px;
}

.author {
    height: 200px;
    width: 200px;
    object-fit: cover;
    overflow: hidden;
    border-radius: 10px;
    transition: box-shadow 0.3s ease-in-out;
}

.author:hover {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.imageButtonRow {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 2rem;
}


.imageButtonRow img {
    width: 200px;
}


.shield {
    height: auto;
    width: 100px;
    padding: 0.5rem;
}

.authors p {
    padding-left: 2rem;
    padding-right: 2rem;
}

